testsuite/serd-tests/good/test-nt-syntax-dot-end.nt
<http://example/s> <http://example/p> _:o .
<http://example/s> <http://example/p> _:o .	
<http://example/s> <http://example/p> _:o.
<http://example/s> <http://example/p> _:o. 
<http://example/s> <http://example/p> _:what.how.