testsuite/serd-tests/bad/bad-nt-syntax-uri-grave.nt
# Bad IRI : grave.
<http://example/`oops`> <http://example/p> <http://example/o> .
